--- a/CPW219-CRUD-Troubleshooting/Views/Students/Index.cshtml
+++ b/CPW219-CRUD-Troubleshooting/Views/Students/Index.cshtml
@@ -31,5 +31,6 @@
 </div>
 <div>
     @Html.ActionLink("Edit", "Edit", new { /* id = Model.PrimaryKey */ }) |
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Index">Back to List</a> |
+    <a asp-action="Create">Add a Student</a>
 </div>
