--- a/CPW219-CRUD-Troubleshooting/Views/Students/Create.cshtml
+++ b/CPW219-CRUD-Troubleshooting/Views/Students/Create.cshtml
@@ -1,22 +1,24 @@
 ﻿@model CPW219_CRUD_Troubleshooting.Models.Student
 
 @{
-    ViewData["Title"] = "Create";
+    ViewData["Title"] = "Add a Student";
 }
 
-<h1>Create</h1>
+<h1>Add a Student</h1>
 
-<h4>Student</h4>
+@if (ViewData["Message"] != null)
+{
+    <div class="alert alert-success alert-dismissible fade show" role="alert">
+        @ViewData["Message"]
+        <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+    </div>
+}
+
 <hr />
 <div class="row">
     <div class="col-md-4">
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <div class="form-group">
-                <label asp-for="StudentId" class="control-label"></label>
-                <input asp-for="StudentId" class="form-control" />
-                <span asp-validation-for="StudentId" class="text-danger"></span>
-            </div>
             <div class="form-group">
                 <label asp-for="Name" class="control-label"></label>
                 <input asp-for="Name" class="form-control" />
