Simplified model reference and added hidden StudentId for update function

--- a/CPW219-CRUD-Troubleshooting/Views/Students/Edit.cshtml
+++ b/CPW219-CRUD-Troubleshooting/Views/Students/Edit.cshtml
@@ -1,4 +1,4 @@
-﻿@model CPW219_CRUD_Troubleshooting.Models.Student
+﻿@model Student
 
 @{
     ViewData["Title"] = "Edit";
@@ -6,12 +6,22 @@
 
 <h1>Edit</h1>
 
-<h4>Student</h4>
+@if (ViewData["Message"] != null)
+{
+    <div class="alert alert-success alert-dismissible fade show" role="alert">
+        @ViewData["Message"]
+        <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+    </div>
+}
+
 <hr />
 <div class="row">
     <div class="col-md-4">
         <form asp-action="Edit">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+
+            <input type="hidden" asp-for="StudentId" />
+
             <div class="form-group">
                 <label asp-for="Name" class="control-label"></label>
                 <input asp-for="Name" class="form-control" />
